--- a/Test02/Views/KinhDoanh/ChinhSuaDL.cshtml
+++ b/Test02/Views/KinhDoanh/ChinhSuaDL.cshtml
@@ -75,10 +75,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.NgayTiepNhan, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.NgayTao, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input class="form-control text-box single-line" data-val="true" data-val-date="The field NgayTiepNhan must be a date." id="NgayTiepNhan" name="NgayTiepNhan" type="Date" value="">
-                @Html.ValidationMessageFor(model => model.NgayTiepNhan, "", new { @class = "text-danger" })
+                <input class="form-control text-box single-line" data-val="true" data-val-date="The field NgayTiepNhan must be a date." id="NgayTao" name="NgayTao" type="Date" value="">
+                @Html.ValidationMessageFor(model => model.NgayTao, "", new { @class = "text-danger" })
             </div>
         </div>
 
