--- a/Test02/Views/KinhDoanh/Delete.cshtml
+++ b/Test02/Views/KinhDoanh/Delete.cshtml
@@ -61,11 +61,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.NgayTiepNhan)
+            @Html.DisplayNameFor(model => model.NgayTao)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.NgayTiepNhan)
+            @Html.DisplayFor(model => model.NgayTao)
         </dd>
 
         <dt>
