--- a/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
+++ b/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
@@ -64,19 +64,12 @@
             </li>
             <li>
                 <a class="app-menu__item @ViewBag.hd" href="~/KinhDoanh/QuanLyHD">
-                    <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Quản lý hóa đơn</span>
+                    <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Danh sách hóa đơn</span>
                 </a>
             </li>
             <li>
                 <a class="app-menu__item @ViewBag.sp" href="~/KinhDoanh/QuanLySP">
                     <i class='app-menu__icon bx bx-task'></i><span class="app-menu__label">Quản lý sản phẩm</span>
-                </a>
-            </li>
-            <li>
-                <a class="app-menu__item @ViewBag.kho" href="~/KinhDoanh/QuanLyKho">
-                    <i class='app-menu__icon bx bx-run'></i><span class="app-menu__label">
-                        Quản lý kho
-                    </span>
                 </a>
             </li>
             <li>
