--- a/Test02/Views/KinhDoanh/Test01.cshtml
+++ b/Test02/Views/KinhDoanh/Test01.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Test02.DaiLy>
+﻿@model IEnumerable<Test02.Models.DaiLy>
 
 @{
     ViewBag.Title = "Test01";
@@ -8,7 +8,7 @@
 <h2>Test01</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "ThemSP")
 </p>
 <table class="table">
     <tr>
