--- a/Test02/Views/KinhDoanh/ThemSP.cshtml
+++ b/Test02/Views/KinhDoanh/ThemSP.cshtml
@@ -49,10 +49,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.HanSH, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.HanSD, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input class="form-control text-box single-line" data-val="true" data-val-date="The field HanSH must be a date." id="HanSH" name="HanSH" type="Date" value="">
-                @Html.ValidationMessageFor(model => model.HanSH, "", new { @class = "text-danger" })
+                <input class="form-control text-box single-line" data-val="true" data-val-date="The field HanSH must be a date." id="HanSD" name="HanSD" type="Date" value="">
+                @Html.ValidationMessageFor(model => model.HanSD, "", new { @class = "text-danger" })
             </div>
         </div>
 
