--- a/Test02/Views/KinhDoanh/XoaSP.cshtml
+++ b/Test02/Views/KinhDoanh/XoaSP.cshtml
@@ -37,11 +37,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.HanSH)
+            @Html.DisplayNameFor(model => model.HanSD)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.HanSH)
+            @Html.DisplayFor(model => model.HanSD)
         </dd>
 
         <dt>
