--- a/Test02/Views/LoginUser/Login.cshtml
+++ b/Test02/Views/LoginUser/Login.cshtml
@@ -1,5 +1,4 @@
 ﻿@model Test02.Models.NhanVien
-
 @{
     Layout = null;
 }
@@ -74,7 +73,7 @@
                 <!--=====FOOTER======-->
                 <div class="text-center p-t-70 txt2">
                     Phần mềm quản lý bán hàng <i class="far fa-copyright" aria-hidden="true"></i>
-                    <script type="text/javascript">document.write(new Date().getFullYear());</script> <a class="txt2" href="https://www.facebook.com/truongvo.vd1503/"> Code bởi Trường </a>
+                    <script type="text/javascript">document.write(new Date().getFullYear());</script> <a class="txt2" href="https://www.facebook.com/truongvo.vd1503/"> Code bởi nhỏm Quản Lý các đại lý (Nhóm 06) </a>
                 </div>
             </div>
         </div>
