--- a/Test02/Views/KinhDoanh/QuanLyDL.cshtml
+++ b/Test02/Views/KinhDoanh/QuanLyDL.cshtml
@@ -22,30 +22,8 @@
                 </div>
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
                     <div class="row">
-                        <div class="col-md-1">
-                            <div class="dataTables_length" id="sampleTable_length">
-                                <label>
-                                    <select name="sampleTable_length" aria-controls="sampleTable" class="form-control form-control-sm" title="Mã h">
-                                        <option value="10">10</option>
-                                        <option value="25">25</option>
-                                        <option value="50">50</option>
-                                        <option value="100">100</option>
-                                    </select> danh mục
-                                </label>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="dataTables_length" id="sampleTable_length">
-                                <label>
-                                    <select name="sampleTable_length" aria-controls="sampleTable" class="form-control form-control-sm" title="Mã h">
-                                        <option value="10">10</option>
-                                        <option value="25">25</option>
-                                        <option value="50">50</option>
-                                        <option value="100">100</option>
-                                    </select> danh mục
-                                </label>
-                            </div>
-                        </div>
+                       
+                        
                         <div class="col-md-1">
                             <div id="sampleTable_filter" class="dataTables_filter">
                                 <label>Tìm kiếm:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="sampleTable"></label>
@@ -58,7 +36,7 @@
                                 @*//Phần render từng dòng trong C#*@
                                 <thead>
                                     <tr role="row">
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="ID nhân viên: activate to sort column ascending" style="width: 50px;">STT</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="ID nhân viên: activate to sort column ascending" style="width: 50px;">Mã đại lý</th>
                                         <th width="300" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Địa chỉ: activate to sort column ascending" style="width: 150px;">Tên đại lý</th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="SĐT: activate to sort column ascending" style="width: 160px;">Loại đại lý</th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Chức vụ: activate to sort column ascending" style="width: 124px;">Địa chỉ</th>
@@ -72,7 +50,7 @@
                                     <tr role="row" class="odd">
                                         <td>01</td>
                                         <td>HSG01</td>
-                                        <td>Tấn Nhã</td>
+                                        <td>Demo</td>
                                         <td>123 Phan Xích Long, P.24,Q.Bình Thạnh</td>
                                         <td>0908455325</td>
                                         <td>abc@gmail.com</td>
@@ -101,14 +79,14 @@
                                                 @Html.DisplayFor(modelItem => item.Email)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.NgayTiepNhan)
+                                                @Html.DisplayFor(modelItem => item.NgayTao)
                                             </td>
                                             <td>
                                                 <a href="/KinhDoanh/ChinhSuaDL/@item.MaDL" class="btn btn-primary btn-sm edit">
-                                                    Chỉnh sửa
-                                                </a>||
+                                                    <i class="fa fa-edit"></i>
+                                                </a>
                                                 <a href="/KinhDoanh/Delete/@item.MaDL" class="btn btn-primary btn-sm deleted">
-                                                    Xóa đại lý
+                                                    <i class="fas fa-trash-alt"></i>
                                                 </a>
                                             </td>
                                         </tr>
