--- a/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
+++ b/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
@@ -28,7 +28,7 @@
 
             <!-- User Menu-->
             <li>
-                <a class="app-nav__item" href="@Url.Action("Logout","LoginUser")"><i class='bx bx-log-out bx-rotate-180'></i> </a>
+                <a class="app-nav__item" href="@Url.Action("Logout", "LoginUser")"><i class='bx bx-log-out bx-rotate-180'></i> </a>
 
             </li>
         </ul>
@@ -40,7 +40,13 @@
             <img class="app-sidebar__user-avatar" src="~/Content/Img/135017829_1026004181228801_2637032699560275_n.jpg" width="50px"
                  alt="User Image">
             <div>
-                <p class="app-sidebar__user-name"><b>@Session["TenNV"].ToString()</b></p>
+                <p class="app-sidebar__user-name">
+                    <b>
+                        @{
+                            var user = (Test02.Models.NhanVien)HttpContext.Current.Session["user"];
+                            @user.TenNV}
+                    </b>
+                </p>
                 <p class="app-sidebar__user-designation">Chào mừng bạn trở lại</p>
             </div>
         </div>
@@ -180,5 +186,7 @@
             }
         }
     </script>
+    <script src="~/Content/ckeditor/ckeditor.js"></script>
+    @RenderSection("BaoCaoJS", false);
 </body>
 </html>
