--- a/Test02/Views/KinhDoanh/ThemSP.cshtml
+++ b/Test02/Views/KinhDoanh/ThemSP.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Test02.Models.SanPham
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Thêm mới";
     Layout = "~/Views/KinhDoanh/Layout/LayoutKD.cshtml";
 }
 
