--- a/Test02/Views/LoginUser/Login.cshtml
+++ b/Test02/Views/LoginUser/Login.cshtml
@@ -52,13 +52,13 @@
                     <div class="wrap-input100 validate-input">
                         <input autocomplete="off" class="input100" type="password" placeholder="Mật khẩu"
                                name="Password" id="Password">
-                        <span toggle="#password-field" class="bx fa-fw bx-hide field-icon click-eye"></span>
+                        <span toggle="#password-field" id="spanElement" class="bx fa-fw bx-hide field-icon click-eye" ></span>
                         <span class="focus-input100"></span>
                         <span class="symbol-input100">
                             <i class='bx bx-key'></i>
                         </span>
                     </div>
-
+                    <p class="text-danger">@TempData["error"]</p>
                     <!--=====ĐĂNG NHẬP======-->
                     <div class="container-login100-form-btn">
                         <input type="submit" value="Đăng nhập" />
@@ -73,7 +73,7 @@
                 <!--=====FOOTER======-->
                 <div class="text-center p-t-70 txt2">
                     Phần mềm quản lý bán hàng <i class="far fa-copyright" aria-hidden="true"></i>
-                    <script type="text/javascript">document.write(new Date().getFullYear());</script> <a class="txt2" href="https://www.facebook.com/truongvo.vd1503/"> Code bởi nhỏm Quản Lý các đại lý (Nhóm 06) </a>
+                    <script type="text/javascript">document.write(new Date().getFullYear());</script> <a class="txt2" href="https://www.facebook.com/nha.truong.3110567/"> Code bởi nhỏm Quản Lý các đại lý (Nhóm 06) </a>
                 </div>
             </div>
         </div>
@@ -104,6 +104,19 @@
                 input.attr("type", "password");
             }
         });
+        const ipnElement = document.querySelector('#Password')
+        const spanElement = document.querySelector('#spanElement')
+        // step 2
+        spanElement.addEventListener('click', function () {
+            // step 3
+            const currentType = ipnElement.getAttribute('type')
+            // step 4
+            ipnElement.setAttribute(
+                'type',
+                currentType === 'password' ? 'text' : 'password'
+            )
+        })
     </script>
+
 </body>
 </html>
