--- a/Test02/Views/KinhDoanh/ThemDH.cshtml
+++ b/Test02/Views/KinhDoanh/ThemDH.cshtml
@@ -26,13 +26,6 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.TenNV, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <input class="form-control text-box single-line" data-val="true" data-val-date="The field NgayTiepNhan must be a date." id="TenNV" name="TenNV" type="text" value="@Session["TenNV"].ToString()">
-                @Html.ValidationMessageFor(model => model.TenNV, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
             @Html.LabelFor(model => model.MaSP, "MaSP", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("MaSP", null, htmlAttributes: new { @class = "form-control" })
@@ -51,7 +44,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.MaNV, "MaNV", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input class="form-control text-box single-line" data-val="true" data-val-date="The field NgayTiepNhan must be a date." id="MaNV" name="MaNV" type="text" value="@Session["MaNV"].ToString()">
+                @Html.DropDownList("MaNV", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.MaNV, "", new { @class = "text-danger" })
             </div>
         </div>
