--- a/Test02/Views/GiaoHang/Layout/LayoutGH.cshtml
+++ b/Test02/Views/GiaoHang/Layout/LayoutGH.cshtml
@@ -49,6 +49,12 @@
         <hr>
         <ul class="app-menu">
             <li>
+                <a class="app-menu__item haha" href="#">
+                    <i class='app-menu__icon bx bx-cart-alt'></i>
+                    <span class="">PHÒNG GIAO HÀNG</span>
+                </a>
+            </li>
+            <li>
                 <a class="app-menu__item @ViewBag.home" href="TrangChu">
                     <i class='app-menu__icon bx bx-tachometer'></i>
                     <span class="app-menu__label">Trang chủ</span>
