--- a/Test02/Views/PhongKho/BaoCao.cshtml
+++ b/Test02/Views/PhongKho/BaoCao.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "BaoCao";
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
-    ViewBag.aQLNV = "active";
+    ViewBag.bc = "active";
     ViewBag.Name = "Báo cáo kho hàng";
 }
 
