--- a/Test02/Views/PhongKho/GiaiQuyetTonKho.cshtml
+++ b/Test02/Views/PhongKho/GiaiQuyetTonKho.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "GiaiQuyetTonKho";
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
-    ViewBag.aQLNV = "active";
+    ViewBag.tk = "active";
     ViewBag.Name = "Giải quyết tồn kho";
 }
 
