--- a/Test02/Views/PhongKho/NhapKho.cshtml
+++ b/Test02/Views/PhongKho/NhapKho.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "NhapKho";
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
-    ViewBag.aQLNV = "active";
+    ViewBag.nk = "active";
     ViewBag.Name = "Nhập kho";
 }
 
