--- a/Test02/Views/PhongKho/Test02.cshtml
+++ b/Test02/Views/PhongKho/Test02.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Test02";
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.Name = "Tổng quan";
-    ViewBag.adk = "active";
+    ViewBag.tq = "active";
 }
 
 <div class="row">
