--- a/Test02/Views/PhongKho/ThemSanPham.cshtml
+++ b/Test02/Views/PhongKho/ThemSanPham.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "ThemSanPham";
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
-    ViewBag.aQLNV = "active";
+    ViewBag.hh = "active";
     ViewBag.Name = "Thêm sản phẩm";
 }
 
