--- a/Test02/Views/PhongKho/XuatKho.cshtml
+++ b/Test02/Views/PhongKho/XuatKho.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "XuatKho";
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
-    ViewBag.aQLNV = "active";
+    ViewBag.xk = "active";
     ViewBag.Name = "Xuất kho";
 }
 
