--- a/Test02/Views/PhongKho/QuanLyDL.cshtml
+++ b/Test02/Views/PhongKho/QuanLyDL.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "QuanLyDL";
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
-    ViewBag.aQLNV = "active";
+    ViewBag.hh = "active";
     ViewBag.Name = "Quản lý hàng hóa";
 }
 
