--- a/Test02/Views/PhongKho/TaoPhieuNhapKho.cshtml
+++ b/Test02/Views/PhongKho/TaoPhieuNhapKho.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "TaoPhieuNhapKho";
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
-    ViewBag.aQLNV = "active";
+    ViewBag.nk = "active";
     ViewBag.Name = "Tạo phiếu nhập kho";
 }
 
