--- a/Test02/Views/PhongKho/TonKho.cshtml
+++ b/Test02/Views/PhongKho/TonKho.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "TonKho";
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
-    ViewBag.aQLNV = "active";
+    ViewBag.tk = "active";
     ViewBag.Name = "Tồn kho";
 }
 
