--- a/Test02/Views/LoginUser/Login.cshtml
+++ b/Test02/Views/LoginUser/Login.cshtml
@@ -65,7 +65,7 @@
                     </div>
                     <!--=====LINK TÌM MẬT KHẨU======-->
                     <div class="text-right p-t-12">
-                        <a class="txt2" href="/forgot.html">
+                        <a class="txt2" href="~/LoginUser/QuenMK">
                             Bạn quên mật khẩu?
                         </a>
                     </div>
